// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cookie Banner Snapshots renders a CookieBanner 1`] = `
.emotion-6 {
  font-size: 13px;
  color: #494949;
  font-weight: 400;
  line-height: 20px;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  background-color: #ffffff;
  border-top: 1px solid #dfe2e6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 99;
  -webkit-transition: -webkit-transform 0.2s ease-out;
  -webkit-transition: transform 0.2s ease-out;
  transition: transform 0.2s ease-out;
}

@media (max-width:450px) {
  .emotion-6 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
    text-align: center;
    padding: 16px 0;
  }
}

.emotion-0 {
  margin-left: 16px;
  margin-right: 16px;
}

@media (max-width:450px) {
  .emotion-0:not(:first-child) {
    margin-top: 16px;
  }
}

.emotion-4 {
  margin-left: 16px;
  margin-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media (max-width:450px) {
  .emotion-4:not(:first-child) {
    margin-top: 16px;
  }
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 14px;
  border-radius: 999px;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  background-color: #ffa126;
  border-color: #ffa126;
  color: #ffffff;
  height: 40px;
  padding: 0 32px;
  min-width: 112px;
  max-width: 288px;
  font-weight: 500;
  width: 100%;
  max-width: 100%;
}

.emotion-3:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-3:disabled,
.emotion-3:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-3:focus {
  background-color: #ffa126;
  border-color: #0875e1;
  color: #ffffff;
}

.emotion-3:hover:focus {
  background-color: #f38b00;
}

.emotion-3:active,
.emotion-3:focus:active,
.emotion-3:hover:active {
  background-color: #ffa126;
  border-color: #ffa126;
  color: #ffffff;
}

.emotion-3:hover {
  background-color: #f38b00;
  border-color: #ffa126;
  color: #ffffff;
}

.emotion-3:disabled,
.emotion-3:active:disabled,
.emotion-3:focus:disabled,
.emotion-3:hover:disabled {
  background-color: #fcd49f;
  border-color: #ffa126;
  color: #ffffff;
}

.emotion-3:not([disabled]):focus,
.emotion-3:not([disabled]):active {
  border-color: #0875e1;
  -webkit-animation: animation-cw31kw 100ms;
  animation: animation-cw31kw 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 1px #0875e1;
}

.emotion-2 {
  position: relative;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  font-weight: 700;
  font-family: "Roboto","Helvetica Neue","Helvetica","Arial",sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 16px;
  padding: 0 12px;
  font-size: inherit;
  font-weight: inherit;
  padding: 0px;
}

.emotion-2:hover:active {
  background-color: transparent;
}

<div
  className="emotion-6 emotion-7"
>
  <div
    className="emotion-0 emotion-1"
  >
    We use cookies to ensure that we give you the best experience on our website. If you continue without changing your settings, we’ll assume that you are willing to receive cookies.
  </div>
  <div
    className="emotion-4 emotion-1"
  >
    <button
      className="emotion-3"
      onClick={[Function]}
    >
      <span
        className="emotion-2"
      >
        Continue
      </span>
    </button>
  </div>
</div>
`;

exports[`Cookie Banner Snapshots renders a CookieBanner with settings 1`] = `
.emotion-8 {
  font-size: 13px;
  color: #494949;
  font-weight: 400;
  line-height: 20px;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  background-color: #ffffff;
  border-top: 1px solid #dfe2e6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 99;
  -webkit-transition: -webkit-transform 0.2s ease-out;
  -webkit-transition: transform 0.2s ease-out;
  transition: transform 0.2s ease-out;
}

@media (max-width:450px) {
  .emotion-8 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
    text-align: center;
    padding: 16px 0;
  }
}

.emotion-0 {
  margin-left: 16px;
  margin-right: 16px;
}

@media (max-width:450px) {
  .emotion-0:not(:first-child) {
    margin-top: 16px;
  }
}

.emotion-6 {
  margin-left: 16px;
  margin-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media (max-width:450px) {
  .emotion-6:not(:first-child) {
    margin-top: 16px;
  }
}

.emotion-5 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 14px;
  border-radius: 999px;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  background-color: #ffa126;
  border-color: #ffa126;
  color: #ffffff;
  height: 40px;
  padding: 0 32px;
  min-width: 112px;
  max-width: 288px;
  font-weight: 500;
  width: 100%;
  max-width: 100%;
}

.emotion-5:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-5:disabled,
.emotion-5:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-5:focus {
  background-color: #ffa126;
  border-color: #0875e1;
  color: #ffffff;
}

.emotion-5:hover:focus {
  background-color: #f38b00;
}

.emotion-5:active,
.emotion-5:focus:active,
.emotion-5:hover:active {
  background-color: #ffa126;
  border-color: #ffa126;
  color: #ffffff;
}

.emotion-5:hover {
  background-color: #f38b00;
  border-color: #ffa126;
  color: #ffffff;
}

.emotion-5:disabled,
.emotion-5:active:disabled,
.emotion-5:focus:disabled,
.emotion-5:hover:disabled {
  background-color: #fcd49f;
  border-color: #ffa126;
  color: #ffffff;
}

.emotion-5:not([disabled]):focus,
.emotion-5:not([disabled]):active {
  border-color: #0875e1;
  -webkit-animation: animation-cw31kw 100ms;
  animation: animation-cw31kw 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 1px #0875e1;
}

.emotion-4 {
  position: relative;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  font-weight: 700;
  font-family: "Roboto","Helvetica Neue","Helvetica","Arial",sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 16px;
  padding: 0 12px;
  font-size: inherit;
  font-weight: inherit;
  padding: 0px;
}

.emotion-4:hover:active {
  background-color: transparent;
}

.emotion-2 {
  font-size: 13px;
  color: #494949;
  font-weight: 400;
  line-height: 20px;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  margin-right: 16px;
  border: 0;
  font-weight: 500;
  white-space: nowrap;
  cursor: pointer;
  padding: 0;
  height: 0%;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  className="emotion-8 emotion-9"
>
  <div
    className="emotion-0 emotion-1"
  >
    We use cookies to ensure that we give you the best experience on our website. If you continue without changing your settings, we’ll assume that you are willing to receive cookies.
  </div>
  <div
    className="emotion-6 emotion-1"
  >
    <button
      className="emotion-2 emotion-3"
      onClick={[Function]}
    >
      Cookie Settings
    </button>
    <button
      className="emotion-5"
      onClick={[Function]}
    >
      <span
        className="emotion-4"
      >
        Continue
      </span>
    </button>
  </div>
</div>
`;

exports[`Cookie Banner Snapshots renders a closed CookieBanner 1`] = `
.emotion-0 {
  margin-left: 16px;
  margin-right: 16px;
}

@media (max-width:450px) {
  .emotion-0:not(:first-child) {
    margin-top: 16px;
  }
}

.emotion-4 {
  margin-left: 16px;
  margin-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media (max-width:450px) {
  .emotion-4:not(:first-child) {
    margin-top: 16px;
  }
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 14px;
  border-radius: 999px;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  background-color: #ffa126;
  border-color: #ffa126;
  color: #ffffff;
  height: 40px;
  padding: 0 32px;
  min-width: 112px;
  max-width: 288px;
  font-weight: 500;
  width: 100%;
  max-width: 100%;
}

.emotion-3:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-3:disabled,
.emotion-3:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-3:focus {
  background-color: #ffa126;
  border-color: #0875e1;
  color: #ffffff;
}

.emotion-3:hover:focus {
  background-color: #f38b00;
}

.emotion-3:active,
.emotion-3:focus:active,
.emotion-3:hover:active {
  background-color: #ffa126;
  border-color: #ffa126;
  color: #ffffff;
}

.emotion-3:hover {
  background-color: #f38b00;
  border-color: #ffa126;
  color: #ffffff;
}

.emotion-3:disabled,
.emotion-3:active:disabled,
.emotion-3:focus:disabled,
.emotion-3:hover:disabled {
  background-color: #fcd49f;
  border-color: #ffa126;
  color: #ffffff;
}

.emotion-3:not([disabled]):focus,
.emotion-3:not([disabled]):active {
  border-color: #0875e1;
  -webkit-animation: animation-cw31kw 100ms;
  animation: animation-cw31kw 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 1px #0875e1;
}

.emotion-2 {
  position: relative;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  font-weight: 700;
  font-family: "Roboto","Helvetica Neue","Helvetica","Arial",sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 16px;
  padding: 0 12px;
  font-size: inherit;
  font-weight: inherit;
  padding: 0px;
}

.emotion-2:hover:active {
  background-color: transparent;
}

.emotion-6 {
  font-size: 13px;
  color: #494949;
  font-weight: 400;
  line-height: 20px;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  background-color: #ffffff;
  border-top: 1px solid #dfe2e6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 99;
  -webkit-transition: -webkit-transform 0.2s ease-out;
  -webkit-transition: transform 0.2s ease-out;
  transition: transform 0.2s ease-out;
  -webkit-transform: translateY(100%);
  -ms-transform: translateY(100%);
  transform: translateY(100%);
}

@media (max-width:450px) {
  .emotion-6 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
    text-align: center;
    padding: 16px 0;
  }
}

<div
  className="emotion-6 emotion-7"
>
  <div
    className="emotion-0 emotion-1"
  >
    We use cookies to ensure that we give you the best experience on our website. If you continue without changing your settings, we’ll assume that you are willing to receive cookies.
  </div>
  <div
    className="emotion-4 emotion-1"
  >
    <button
      className="emotion-3"
      onClick={[Function]}
    >
      <span
        className="emotion-2"
      >
        Continue
      </span>
    </button>
  </div>
</div>
`;

exports[`Cookie Banner Snapshots renders a closed CookieBanner with settings 1`] = `
.emotion-0 {
  margin-left: 16px;
  margin-right: 16px;
}

@media (max-width:450px) {
  .emotion-0:not(:first-child) {
    margin-top: 16px;
  }
}

.emotion-6 {
  margin-left: 16px;
  margin-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media (max-width:450px) {
  .emotion-6:not(:first-child) {
    margin-top: 16px;
  }
}

.emotion-5 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 14px;
  border-radius: 999px;
  border: 1px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  background-color: #ffa126;
  border-color: #ffa126;
  color: #ffffff;
  height: 40px;
  padding: 0 32px;
  min-width: 112px;
  max-width: 288px;
  font-weight: 500;
  width: 100%;
  max-width: 100%;
}

.emotion-5:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-5:disabled,
.emotion-5:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-5:focus {
  background-color: #ffa126;
  border-color: #0875e1;
  color: #ffffff;
}

.emotion-5:hover:focus {
  background-color: #f38b00;
}

.emotion-5:active,
.emotion-5:focus:active,
.emotion-5:hover:active {
  background-color: #ffa126;
  border-color: #ffa126;
  color: #ffffff;
}

.emotion-5:hover {
  background-color: #f38b00;
  border-color: #ffa126;
  color: #ffffff;
}

.emotion-5:disabled,
.emotion-5:active:disabled,
.emotion-5:focus:disabled,
.emotion-5:hover:disabled {
  background-color: #fcd49f;
  border-color: #ffa126;
  color: #ffffff;
}

.emotion-5:not([disabled]):focus,
.emotion-5:not([disabled]):active {
  border-color: #0875e1;
  -webkit-animation: animation-cw31kw 100ms;
  animation: animation-cw31kw 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 1px #0875e1;
}

.emotion-4 {
  position: relative;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  font-weight: 700;
  font-family: "Roboto","Helvetica Neue","Helvetica","Arial",sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 16px;
  padding: 0 12px;
  font-size: inherit;
  font-weight: inherit;
  padding: 0px;
}

.emotion-4:hover:active {
  background-color: transparent;
}

.emotion-8 {
  font-size: 13px;
  color: #494949;
  font-weight: 400;
  line-height: 20px;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  background-color: #ffffff;
  border-top: 1px solid #dfe2e6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 99;
  -webkit-transition: -webkit-transform 0.2s ease-out;
  -webkit-transition: transform 0.2s ease-out;
  transition: transform 0.2s ease-out;
  -webkit-transform: translateY(100%);
  -ms-transform: translateY(100%);
  transform: translateY(100%);
}

@media (max-width:450px) {
  .emotion-8 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
    text-align: center;
    padding: 16px 0;
  }
}

.emotion-2 {
  font-size: 13px;
  color: #494949;
  font-weight: 400;
  line-height: 20px;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  margin-right: 16px;
  border: 0;
  font-weight: 500;
  white-space: nowrap;
  cursor: pointer;
  padding: 0;
  height: 0%;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  className="emotion-8 emotion-9"
>
  <div
    className="emotion-0 emotion-1"
  >
    We use cookies to ensure that we give you the best experience on our website. If you continue without changing your settings, we’ll assume that you are willing to receive cookies.
  </div>
  <div
    className="emotion-6 emotion-1"
  >
    <button
      className="emotion-2 emotion-3"
      onClick={[Function]}
    >
      Cookie Settings
    </button>
    <button
      className="emotion-5"
      onClick={[Function]}
    >
      <span
        className="emotion-4"
      >
        Continue
      </span>
    </button>
  </div>
</div>
`;
